# sr_core

./: .gitignore  README.md  aws.yml  jenkins.yml  project.rosinstall  pull_request_template.md  repository.rosinstall  shippable.yml
.circleci/: config.yml
sr_core/: CMakeLists.txt  circle.yml  package.xml  shippable.yml
sr_gazebo_sim/: CMakeLists.txt  gazebo_sim_plugin.xml  package.xml
sr_gazebo_sim/include/sr_gazebo_sim/: gazebo_hardware_sim.h
sr_gazebo_sim/src/: gazebo_hardware_sim.cpp
sr_hand/: .catkin_lint_ignore  CMakeLists.txt  package.xml  setup.py  shadowhand_analyzer.yaml
sr_hand/include/sr_hand/: hand_commander.hpp  sr_diagnosticer.h  sr_publisher.h  sr_subscriber.h
sr_hand/launch/: sr_arm_and_hand.launch  srh.launch
sr_hand/launch/advanced/: sr_arm_CAN.launch  sr_arm_CAN_noTF.launch  sr_arm_motor_simple.launch  sr_realarm_motor.launch  srh_etherCAT.launch  srh_etherCAT_noTF.launch  srh_etherCAT_standalone.launch  static_transforms.launch
sr_hand/launch/demo/: hand_demo_view.launch
sr_hand/launch/gazebo/: gazebo_arm.launch  gazebo_arm_and_hand.launch  gazebo_hand.launch
sr_hand/launch/rviz/: rviz_motor.launch  rviz_muscle.launch
sr_hand/scripts/sr_hand/: Grasp.py  __init__.py  grasps.xml  grasps_interpoler.py  grasps_parser.py  shadowhand_commander.py  shadowhand_ros.py  tactile_receiver.py
sr_hand/src/: hand_commander.cpp  sr_diagnosticer.cpp  sr_publisher.cpp  sr_subscriber.cpp
sr_hand/src/hand/: CAN_compatibility_arm.cpp  (+15 more)
sr_hand/test/: hand_commander_arm_and_hand_test.test  hand_commander_test.cpp  hand_commander_test.test  mock_hand.py
sr_hardware_interface/: CMakeLists.txt  package.xml
sr_hardware_interface/include/sr_hardware_interface/: sr_actuator.hpp  tactile_sensors.hpp
sr_mechanism_controllers/: .catkin_lint_ignore  CMakeLists.txt  controller_plugins.xml  package.xml
sr_mechanism_controllers/cfg/: Tendons.cfg
sr_mechanism_controllers/doc/: README.md
sr_mechanism_controllers/example/: simple_spline_trajectory.cpp  simple_trajectory.cpp  simple_trajectory_compare.cpp  srh_example_controller.cpp  srh_example_controller.hpp  srh_syntouch_controllers.cpp  srh_syntouch_controllers.hpp
sr_mechanism_controllers/include/sr_mechanism_controllers/: copyright_exclusions.cfg  joint_spline_trajectory_action_controller.hpp  joint_state_controller.h  joint_trajectory_action_controller.hpp  sr_controller.hpp  sr_friction_compensation.hpp  sr_plain_pid.h  sr_plain_pid.hpp  srh_fake_joint_calibration_controller.h  srh_grasp_controller.hpp  srh_joint_effort_controller.hpp  srh_joint_muscle_valve_controller.hpp  srh_joint_position_controller.hpp  srh_joint_variable_pid_position_controller.hpp  srh_joint_velocity_controller.hpp  srh_mixed_position_velocity_controller.hpp  srh_muscle_joint_position_controller.hpp
sr_mechanism_controllers/include/sr_mechanism_controllers/test/: test_controllers.hpp
sr_mechanism_controllers/src/: copyright_exclusions.cfg  joint_spline_trajectory_action_controller.cpp  joint_state_controller.cpp  joint_trajectory_action_controller.cpp  sr_controller.cpp  sr_friction_compensation.cpp  sr_plain_pid.cpp  srh_fake_joint_calibration_controller.cpp  srh_grasp_controller.cpp  srh_joint_effort_controller.cpp  srh_joint_muscle_valve_controller.cpp  srh_joint_position_controller.cpp  srh_joint_variable_pid_position_controller.cpp  srh_joint_velocity_controller.cpp  srh_mixed_position_velocity_controller.cpp  srh_muscle_joint_position_controller.cpp
sr_mechanism_controllers/test/: test_controllers.cpp  test_joint_pos_controller.cpp
sr_mechanism_controllers/test/config/: friction_compensation.yaml
sr_mechanism_model/: .catkin_lint_ignore  CMakeLists.txt  package.xml  transmission_plugin.xml
sr_mechanism_model/include/sr_mechanism_model/: copyright_exclusions.cfg  joint_0_transmission.hpp  joint_0_transmission_for_muscle.hpp  null_transmission.hpp  simple_transmission.hpp  simple_transmission_for_muscle.hpp
sr_mechanism_model/src/: copyright_exclusions.cfg  joint_0_transmission.cpp  joint_0_transmission_for_muscle.cpp  null_transmission.cpp  simple_transmission.cpp  simple_transmission_for_muscle.cpp
sr_self_test/: CMakeLists.txt  package.xml
sr_self_test/src/: diagnostic_parser.cpp  manual_test.cpp  motor_test.cpp  sensor_noise_test.cpp  sr_self_test.cpp  sr_test_runner.cpp  test_joint_movement.cpp
sr_self_test/test/: automatic_manual_test_response.py  test_self_test.cpp
sr_tactile_sensors/: .catkin_lint_ignore  CMakeLists.txt  package.xml  setup.py
sr_tactile_sensors/examples/: tactile.cpp
sr_tactile_sensors/include/sr_tactile_sensors/: sr_gazebo_virtual_tactile_sensor.hpp  sr_generic_tactile_sensor.hpp  sr_real_tactile_sensor.hpp  sr_virtual_tactile_sensor.hpp
sr_tactile_sensors/launch/: sr_tactile.launch  sr_tactile_gazebo.launch  sr_tactile_real.launch  sr_tactile_virtual.launch
sr_tactile_sensors/params/: sensor_names.yaml  sensor_names_Unscaled.yaml
sr_tactile_sensors/scripts/sr_tactile_sensors/: virtual_ShadowPST_publisher.py  virtual_shadow_pst_publisher.py
sr_tactile_sensors/src/: sr_bumper_rviz_marker.cpp  sr_gazebo_virtual_tactile_sensor.cpp  sr_generic_tactile_sensor.cpp  sr_real_tactile_sensor.cpp  sr_tactile_rviz_marker.cpp  sr_virtual_tactile_sensor.cpp
sr_utilities/: CMakeLists.txt  README.md  package.xml  setup.py
sr_utilities/launch/: calibrate_hand_finder.launch
sr_utilities/nodes/: temperature_monitor.py
sr_utilities/scripts/: get_joint_states.py  interactive_marker.py  joint_0_publisher.py  joint_states_merger.py  moving_average_filter.py  ordered_hand_arm_joint_states_merger.py  ordered_position_joint_states_merger.py  ordered_target_joint_states_merger.py
sr_utilities/src/: calibration.cpp  jacobian_utils.cpp  sr_arm_finder.cpp  sr_hand_finder.cpp  sr_trajectory_command_publisher.cpp
sr_utilities/test/: test_arm_finder.cpp  test_arm_finder.py  test_arm_finder.test  test_calibration.cpp  test_hand_finder.cpp  test_hand_finder.py  test_hand_finder.test  test_jacobian_utils.cpp  test_jacobian_utils.test  test_math_utils.cpp  test_thread_safe_map.cpp
(+50 files in other folders)
