<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
    <name>sr_core</name>
    <version>0.0.0</version>
    <description>These are the core packages for the Shadow Robot hardware and simulation.</description>

    <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

    <license>GPL</license>

    <author email="ugo@shadowrobot.com">Ugo Cupcic</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>sr_gazebo_sim</run_depend>
    <run_depend>sr_hand</run_depend>
    <run_depend>sr_hardware_interface</run_depend>
    <run_depend>sr_mechanism_controllers</run_depend>
    <run_depend>sr_mechanism_model</run_depend>
    <run_depend>sr_tactile_sensors</run_depend>
    <run_depend>sr_utilities</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
