<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
    <name>sr_hardware_interface</name>
    <version>1.4.0</version>
    <description>This package contains the actuator used in the hand model.</description>
    <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/sr_hardware_interface</url>
    <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
    <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

    <author>Ugo Cupcic</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>roscpp</build_depend>
    <build_depend>ros_ethercat_hardware</build_depend>
    <build_depend>ros_ethercat_model</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>ros_ethercat_hardware</run_depend>
    <run_depend>ros_ethercat_model</run_depend>

</package>
