<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
    <name>sr_mechanism_controllers</name>
    <version>1.4.0</version>
    <description>The sr_mechanism_controllers package contains different types of
        controllers for the etherCAT hand: position controllers,
        velocity controllers, force controllers, ...
    </description>
    <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

    <license>GPL</license>

    <url type="website">http://ros.org/wiki/sr_mechanism_controllers</url>
    <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
    <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

    <author>Ugo Cupcic</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>sr_robot_msgs</build_depend>
    <build_depend>sr_utilities</build_depend>
    <build_depend>controller_interface</build_depend>
    <build_depend>controller_manager_msgs</build_depend>
    <build_depend>realtime_tools</build_depend>
    <build_depend>velocity_controllers</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>control_toolbox</build_depend>
    <build_depend>sr_hardware_interface</build_depend>
    <build_depend>xmlrpcpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>tinyxml2</build_depend>
    <build_depend>ros_ethercat_model</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>sr_robot_msgs</run_depend>
    <run_depend>sr_utilities</run_depend>
    <run_depend>controller_interface</run_depend>
    <run_depend>controller_manager_msgs</run_depend>
    <run_depend>realtime_tools</run_depend>
    <run_depend>velocity_controllers</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>control_toolbox</run_depend>
    <run_depend>sr_hardware_interface</run_depend>
    <run_depend>xmlrpcpp</run_depend>
    <run_depend>ros_ethercat_model</run_depend>

    <!-- Dependencies needed only for running tests. -->
    <test_depend>gtest</test_depend>

    <export>
        <controller_interface plugin="${prefix}/controller_plugins.xml"/>
    </export>

</package>
