<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
    <name>sr_tactile_sensors</name>
    <version>1.4.0</version>
    <description>An interface to the tactile sensors used in the Shadow Dextrous Hand. Also Contains a virtual set of
        sensors.
    </description>
    <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

    <license>BSD</license>

    <url type="website">http://ros.org/wiki/sr_tactile_sensors</url>
    <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
    <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

    <author>Ugo Cupcic</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sr_robot_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sr_robot_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>gazebo_msgs</run_depend>
    <run_depend>gazebo_ros</run_depend>

</package>
